recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:16: error: expected start of definition
	override def run() {
                 ^Spiral:20: error: Unmatched closing brace '}' ignored here
}
^