recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	baisseCrayon()
	if ( steps == 0){
		return 
	}
	if ( steps !== 0)
		return  spiral( steps-1, angle, lenght+increment, increment)
		
	}
	return spiral ( 0, angle, lenght+increment, increment)
}
